--- a/views/admin/clients-prospects.ejs
+++ b/views/admin/clients-prospects.ejs
@@ -8,8 +8,6 @@
 
     <!-- CSS  -->
     <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/projects/p-dashboard.css">
-    <link rel="stylesheet" href="/css/clients/clients.css">
 </head>
 
 <body>
@@ -330,6 +328,7 @@
 
                 <div class="main-popup hide"></div>
                 <div class="section-popup hide"></div>
+                <%- include ('../partials/alert.ejs') %>
             </div>
     </section>
 
