--- a/views/index.ejs
+++ b/views/index.ejs
@@ -301,6 +301,8 @@
 
                 <div class="main-popup hide"></div>
                 <div class="section-popup hide"></div>
+                <%- include ('./partials/alert.ejs') %>
+                
             </div>
     </section>
 
