--- a/views/partials/indexHeader.ejs
+++ b/views/partials/indexHeader.ejs
@@ -87,7 +87,7 @@
                             </a>
                         </li>
 
-                        <li class="">
+                        <li class="" onclick="successAlert()">
                             <a class="flex">
                                 <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 24 24"
                                     id="setting" class="icon">
