--- a/static/css/common.css
+++ b/static/css/common.css
@@ -178,7 +178,6 @@ input:is([type="checkbox"], [type="radio"]){
 
 .flex {
     display: flex;
-    align-items: center;
     gap: 10px;
 }
 
@@ -327,6 +326,8 @@ nav .sub-menu li a{
     background: var(--color-900);
     color: var(--color-20);
     gap: 5px;
+    display: flex;
+    align-items: center;
 }
 
 .btn-primary:hover {
@@ -400,6 +401,7 @@ main .features {
     border-radius: var(--radius-6);
     overflow: hidden;
     background: var(--color-100);
+    z-index: 10;
 }
 
 .btn-filter {
@@ -544,8 +546,6 @@ main .contents {
 main .p-employees{
     width: 100%;
     display: flex;
-    align-items: flex-start;
-    gap: 10px;
     margin-bottom: 15px;
 }
 
@@ -696,6 +696,7 @@ main .sub-task{
     background: var(--color-100);
     width: 100%;
     min-height: 100vh;
+    z-index: 50;
 }
 .main-popup .blur{
     width: 100%;
@@ -806,13 +807,14 @@ main .sub-task{
     position: absolute;
     top: 0;
     right: 0;
-    /* background: var(--color-100); */
-    backdrop-filter: blur(5px);
-    width: 70%;
+    background: var(--color-100);
+    filter: contrast(100%);
+    width: 60%;
     min-height: 100vh;
     border: 1px solid var(--color-100);
+    z-index: 50;
 }
-.section-popup :is(.notification-popup, .addItem-popup){
+.section-popup :is(.notification-popup, .addItem-popup, .settings-popup){
     width: 100%;
     height: 100%;
     max-width: 450px;
@@ -918,7 +920,7 @@ main .sub-task{
     position: absolute;
     box-shadow: var(--b-shadow-1);
     right: 2%;
-    top: -25%;
+    top: -50%;
     max-width: 300px;
     word-break: normal;
     padding: 20px 15px;
@@ -945,4 +947,42 @@ main .sub-task{
 .warning-alert svg{
     border: 3px solid var(--color-warning-500);
     fill: var(--color-warning-500);
+}
+
+.set-details .field input{
+    width: 250px;
+}
+.edit-details{
+    margin-top: 10px;
+}
+.set-title{
+    background: var(--color-100);
+    padding: 5px 12px;
+    width: 230px;
+    word-break: normal;
+    /* gap: 2rem; */
+    border: 1px solid var(--color-200);
+    border-radius: var(--radius-5);
+}
+.set-title>.flex{
+    gap: 5px;
+}
+.set-title span{
+    border: 1px solid var(--color-200);
+    border-radius: var(--radius-circle);
+    background: var(--color-20);
+    width: 25px;
+    height: 25px;
+}
+.set-title svg{
+    width: 15px;
+    height: 15px;
+}
+
+
+.settings-popup{
+    padding: 15px;
+}
+.settings-popup .field{
+    margin: 10px auto;
 }
