--- a/views/partials/indexHeader.ejs
+++ b/views/partials/indexHeader.ejs
@@ -1,5 +1,5 @@
 <div class="left">
-            <div class="logo flex">
+            <div class="logo flex align-center">
                 <img src="/img/logo.png" alt="Logo">
                 <div class="logo-title">
                     <h3 class="uppercase">STYLE PERFECT</h3>
@@ -8,7 +8,7 @@
             <nav>
                 <ul class="nav-list">
                     <li class="">
-                        <a href="" class="flex">
+                        <a href="" class="flex align-center">
                             <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 24 24"
                                 id="tachometer-fast-alt" class="icon">
                                 <path
@@ -31,7 +31,7 @@
                     </li>
 
                     <li class="">
-                        <a href="" class="flex">
+                        <a href="" class="flex align-center">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="users-alt" class="icon">
                                 <path
                                     d="M12.3,12.22A4.92,4.92,0,0,0,14,8.5a5,5,0,0,0-10,0,4.92,4.92,0,0,0,1.7,3.72A8,8,0,0,0,1,19.5a1,1,0,0,0,2,0,6,6,0,0,1,12,0,1,1,0,0,0,2,0A8,8,0,0,0,12.3,12.22ZM9,11.5a3,3,0,1,1,3-3A3,3,0,0,1,9,11.5Zm9.74.32A5,5,0,0,0,15,3.5a1,1,0,0,0,0,2,3,3,0,0,1,3,3,3,3,0,0,1-1.5,2.59,1,1,0,0,0-.5.84,1,1,0,0,0,.45.86l.39.26.13.07a7,7,0,0,1,4,6.38,1,1,0,0,0,2,0A9,9,0,0,0,18.74,11.82Z">
@@ -52,7 +52,7 @@
                     </li>
 
                     <li class="">
-                        <a href="" class="flex">
+                        <a href="" class="flex align-center">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="users-alt" class="icon">
                                 <path
                                     d="M12.3,12.22A4.92,4.92,0,0,0,14,8.5a5,5,0,0,0-10,0,4.92,4.92,0,0,0,1.7,3.72A8,8,0,0,0,1,19.5a1,1,0,0,0,2,0,6,6,0,0,1,12,0,1,1,0,0,0,2,0A8,8,0,0,0,12.3,12.22ZM9,11.5a3,3,0,1,1,3-3A3,3,0,0,1,9,11.5Zm9.74.32A5,5,0,0,0,15,3.5a1,1,0,0,0,0,2,3,3,0,0,1,3,3,3,3,0,0,1-1.5,2.59,1,1,0,0,0-.5.84,1,1,0,0,0,.45.86l.39.26.13.07a7,7,0,0,1,4,6.38,1,1,0,0,0,2,0A9,9,0,0,0,18.74,11.82Z">
@@ -69,13 +69,12 @@
                             <li><a href="">Purchases</a></li>
                             <li><a href="">Payments</a></li>
                             <li><a href="">Collections</a></li>
-                            <li><a href="">Expenses</a></li>
                         </ul>
                     </li>
 
                     <div class="bottom">
-                        <li class="" onclick="openNotification()">
-                            <a class="flex">
+                        <li class="" onclick="openNotification(this)">
+                            <a class="flex align-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 24 24"
                                     id="bell" class="icon">
                                     <path fill="##000000"
@@ -88,7 +87,7 @@
                         </li>
 
                         <li class="" onclick="successAlert()">
-                            <a class="flex">
+                            <a class="flex align-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 24 24"
                                     id="setting" class="icon">
                                     <path fill=""
@@ -99,7 +98,7 @@
                             </a>
                         </li>
                         <li onclick="location.href=`/admin/logout`">
-                            <a class="flex">
+                            <a class="flex align-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="signout" class="icon"><path d="M4,12a1,1,0,0,0,1,1h7.59l-2.3,2.29a1,1,0,0,0,0,1.42,1,1,0,0,0,1.42,0l4-4a1,1,0,0,0,.21-.33,1,1,0,0,0,0-.76,1,1,0,0,0-.21-.33l-4-4a1,1,0,1,0-1.42,1.42L12.59,11H5A1,1,0,0,0,4,12ZM17,2H7A3,3,0,0,0,4,5V8A1,1,0,0,0,6,8V5A1,1,0,0,1,7,4H17a1,1,0,0,1,1,1V19a1,1,0,0,1-1,1H7a1,1,0,0,1-1-1V16a1,1,0,0,0-2,0v3a3,3,0,0,0,3,3H17a3,3,0,0,0,3-3V5A3,3,0,0,0,17,2Z"></path></svg>
                                 <span class="text">Log Out</span>
                             </a>
