--- a/views/admin/purchases.ejs
+++ b/views/admin/purchases.ejs
@@ -69,7 +69,7 @@
                             <button type="button" class="btn-filter">UPI</button>
                             <button type="button" class="btn-filter">Cheque</button>
                         </div>
-                        <div class="search flex">
+                        <div class="search flex align-center">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="search-icon"
                                 class="svg-secondary">
                                 <path
