--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,11 +67,11 @@
                         </div>
 
                         <div class="features flex">
-                            <div class="filter-options">
+                            <!-- <div class="filter-options">
                                 <button type="button" class="btn-filter active">All Projects</button>
                                 <button type="button" class="btn-filter">Interior</button>
                                 <button type="button" class="btn-filter">Exterior</button>
-                            </div>
+                            </div> -->
                             <div class="search flex align-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="search-icon"
                                     class="svg-secondary">
@@ -313,3 +313,18 @@
 </body>
 
 </html>
+<!-- <div class="field">
+    <p class="title">Contact Number</p>
+    <input type="number" name="" id="" required>
+    <span class="err hide">Field cannnot be empty</span>
+</div>
+<div class="field">
+    <p class="title">Name</p>
+    <input type="text" name="" id="" required>
+    <span class="err hide">Field cannot be empty</span>
+</div>
+<div class="field">
+    <p class="title">Name</p>
+    <input type="text" name="" id="">
+    <span class="err hide">Field cannot be empty</span>
+</div> -->
