--- a/views/admin/user.ejs
+++ b/views/admin/user.ejs
@@ -63,7 +63,7 @@
                             <button type="button" class="btn-filter">Active</button>
                             <button type="button" class="btn-filter">Inactive</button>
                         </div>
-                        <div class="search flex">
+                        <div class="search flex align-center">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="search-icon"
                                 class="svg-secondary">
                                 <path
