--- a/views/admin/vendors-suppliers.ejs
+++ b/views/admin/vendors-suppliers.ejs
@@ -58,7 +58,7 @@
                                 <button type="button" class="btn-filter">Vendors</button>
                                 <button type="button" class="btn-filter">Suppliers</button>
                             </div> -->
-                            <div class="search flex">
+                            <div class="search flex align-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="search-icon"
                                     class="svg-secondary">
                                     <path
