--- a/views/partials/indexHeader.ejs
+++ b/views/partials/indexHeader.ejs
@@ -1,109 +1,108 @@
 <div class="left">
-            <div class="logo flex align-center">
-                <img src="/img/logo.png" alt="Logo">
-                <div class="logo-title">
-                    <h3 class="uppercase">STYLE PERFECT</h3>
-                </div>
-            </div>
-            <nav>
-                <ul class="nav-list">
-                    <li class="">
-                        <a href="" class="flex align-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 24 24"
-                                id="tachometer-fast-alt" class="icon">
-                                <path
-                                    d="M12 5a10 10 0 0 0-8.66 15 1 1 0 0 0 1.74-1A7.92 7.92 0 0 1 4 15a8 8 0 1 1 14.93 4 1 1 0 0 0 .37 1.37 1 1 0 0 0 1.36-.37A10 10 0 0 0 12 5Zm2.84 5.76-1.55 1.54A2.91 2.91 0 0 0 12 12a3 3 0 1 0 3 3 2.9 2.9 0 0 0-.3-1.28l1.55-1.54a1 1 0 0 0 0-1.42 1 1 0 0 0-1.41 0ZM12 16a1 1 0 0 1 0-2 1 1 0 0 1 .7.28 1 1 0 0 1 .3.72 1 1 0 0 1-1 1Z">
-                                </path>
-                            </svg>
-                            <span class="text">Projects</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="angle-right"
-                                class="icon svg-secondary arrow">
-                                <path
-                                    d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z">
-                                </path>
-                            </svg>
-                        </a>
-                        <ul class="sub-menu">
-                            <li><a href="" class="active">Dashboard</a></li>
-                            <li><a href="">Project Finances</a></li>
-                            <li><a href="">Project Expenses</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="">
-                        <a href="" class="flex align-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="users-alt" class="icon">
-                                <path
-                                    d="M12.3,12.22A4.92,4.92,0,0,0,14,8.5a5,5,0,0,0-10,0,4.92,4.92,0,0,0,1.7,3.72A8,8,0,0,0,1,19.5a1,1,0,0,0,2,0,6,6,0,0,1,12,0,1,1,0,0,0,2,0A8,8,0,0,0,12.3,12.22ZM9,11.5a3,3,0,1,1,3-3A3,3,0,0,1,9,11.5Zm9.74.32A5,5,0,0,0,15,3.5a1,1,0,0,0,0,2,3,3,0,0,1,3,3,3,3,0,0,1-1.5,2.59,1,1,0,0,0-.5.84,1,1,0,0,0,.45.86l.39.26.13.07a7,7,0,0,1,4,6.38,1,1,0,0,0,2,0A9,9,0,0,0,18.74,11.82Z">
-                                </path>
-                            </svg>
-                            <span class="text">Clients & Vendors</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="angle-right"
-                                class="icon svg-secondary arrow">
-                                <path
-                                    d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z">
-                                </path>
-                            </svg>
-                        </a>
-                        <ul class="sub-menu">
-                            <li><a href="">Clients</a></li>
-                            <li><a href="">Vendors</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="">
-                        <a href="" class="flex align-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="users-alt" class="icon">
-                                <path
-                                    d="M12.3,12.22A4.92,4.92,0,0,0,14,8.5a5,5,0,0,0-10,0,4.92,4.92,0,0,0,1.7,3.72A8,8,0,0,0,1,19.5a1,1,0,0,0,2,0,6,6,0,0,1,12,0,1,1,0,0,0,2,0A8,8,0,0,0,12.3,12.22ZM9,11.5a3,3,0,1,1,3-3A3,3,0,0,1,9,11.5Zm9.74.32A5,5,0,0,0,15,3.5a1,1,0,0,0,0,2,3,3,0,0,1,3,3,3,3,0,0,1-1.5,2.59,1,1,0,0,0-.5.84,1,1,0,0,0,.45.86l.39.26.13.07a7,7,0,0,1,4,6.38,1,1,0,0,0,2,0A9,9,0,0,0,18.74,11.82Z">
-                                </path>
-                            </svg>
-                            <span class="text">Accounting</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="angle-right" class="icon">
-                                <path
-                                    d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z">
-                                </path>
-                            </svg>
-                        </a>
-                        <ul class="sub-menu">
-                            <li><a href="">Purchases</a></li>
-                            <li><a href="">Payments</a></li>
-                            <li><a href="">Collections</a></li>
-                        </ul>
-                    </li>
-
-                    <div class="bottom">
-                        <li class="" onclick="openNotification(this)">
-                            <a class="flex align-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 24 24"
-                                    id="bell" class="icon">
-                                    <path fill="##000000"
-                                        d="M18,13.18V10a6,6,0,0,0-5-5.91V3a1,1,0,0,0-2,0V4.09A6,6,0,0,0,6,10v3.18A3,3,0,0,0,4,16v2a1,1,0,0,0,1,1H8.14a4,4,0,0,0,7.72,0H19a1,1,0,0,0,1-1V16A3,3,0,0,0,18,13.18ZM8,10a4,4,0,0,1,8,0v3H8Zm4,10a2,2,0,0,1-1.72-1h3.44A2,2,0,0,1,12,20Zm6-3H6V16a1,1,0,0,1,1-1H17a1,1,0,0,1,1,1Z">
-                                    </path>
-                                </svg>
-                                <span class="text">Notifications</span>
-                                <span id="notification-count" class="btn-warning">5</span>
-                            </a>
-                        </li>
-
-                        <li class="" onclick="successAlert()">
-                            <a class="flex align-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 24 24"
-                                    id="setting" class="icon">
-                                    <path fill=""
-                                        d="M19.9 12.66a1 1 0 0 1 0-1.32l1.28-1.44a1 1 0 0 0 .12-1.17l-2-3.46a1 1 0 0 0-1.07-.48l-1.88.38a1 1 0 0 1-1.15-.66l-.61-1.83a1 1 0 0 0-.95-.68h-4a1 1 0 0 0-1 .68l-.56 1.83a1 1 0 0 1-1.15.66L5 4.79a1 1 0 0 0-1 .48L2 8.73a1 1 0 0 0 .1 1.17l1.27 1.44a1 1 0 0 1 0 1.32L2.1 14.1a1 1 0 0 0-.1 1.17l2 3.46a1 1 0 0 0 1.07.48l1.88-.38a1 1 0 0 1 1.15.66l.61 1.83a1 1 0 0 0 1 .68h4a1 1 0 0 0 .95-.68l.61-1.83a1 1 0 0 1 1.15-.66l1.88.38a1 1 0 0 0 1.07-.48l2-3.46a1 1 0 0 0-.12-1.17ZM18.41 14l.8.9-1.28 2.22-1.18-.24a3 3 0 0 0-3.45 2L12.92 20h-2.56L10 18.86a3 3 0 0 0-3.45-2l-1.18.24-1.3-2.21.8-.9a3 3 0 0 0 0-4l-.8-.9 1.28-2.2 1.18.24a3 3 0 0 0 3.45-2L10.36 4h2.56l.38 1.14a3 3 0 0 0 3.45 2l1.18-.24 1.28 2.22-.8.9a3 3 0 0 0 0 3.98Zm-6.77-6a4 4 0 1 0 4 4 4 4 0 0 0-4-4Zm0 6a2 2 0 1 1 2-2 2 2 0 0 1-2 2Z">
-                                    </path>
-                                </svg>
-                                <span class="text">Settings</span>
-                            </a>
-                        </li>
-                        <li onclick="location.href=`/admin/logout`">
-                            <a class="flex align-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="signout" class="icon"><path d="M4,12a1,1,0,0,0,1,1h7.59l-2.3,2.29a1,1,0,0,0,0,1.42,1,1,0,0,0,1.42,0l4-4a1,1,0,0,0,.21-.33,1,1,0,0,0,0-.76,1,1,0,0,0-.21-.33l-4-4a1,1,0,1,0-1.42,1.42L12.59,11H5A1,1,0,0,0,4,12ZM17,2H7A3,3,0,0,0,4,5V8A1,1,0,0,0,6,8V5A1,1,0,0,1,7,4H17a1,1,0,0,1,1,1V19a1,1,0,0,1-1,1H7a1,1,0,0,1-1-1V16a1,1,0,0,0-2,0v3a3,3,0,0,0,3,3H17a3,3,0,0,0,3-3V5A3,3,0,0,0,17,2Z"></path></svg>
-                                <span class="text">Log Out</span>
-                            </a>
-                        </li>
-                    </div>
-                </ul>
-            </nav>
+    <div class="logo flex align-center">
+        <img src="/img/logo.png" alt="Logo">
+        <div class="logo-title">
+            <h3 class="uppercase">STYLE PERFECT</h3>
         </div>
+    </div>
+    <nav>
+        <ul class="nav-list">
+            <li>
+                <a class="flex align-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="apps" class="icon">
+                        <path
+                            d="M10,13H3a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V14A1,1,0,0,0,10,13ZM9,20H4V15H9ZM21,2H14a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V3A1,1,0,0,0,21,2ZM20,9H15V4h5Zm1,4H14a1,1,0,0,0-1,1v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V14A1,1,0,0,0,21,13Zm-1,7H15V15h5ZM10,2H3A1,1,0,0,0,2,3v7a1,1,0,0,0,1,1h7a1,1,0,0,0,1-1V3A1,1,0,0,0,10,2ZM9,9H4V4H9Z">
+                        </path>
+                    </svg>
+                    <span class="text">Projects</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="angle-right"
+                        class="icon svg-secondary arrow">
+                        <path
+                            d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z">
+                        </path>
+                    </svg>
+                </a>
+                <div class="sub-menu">
+                    <p onclick="location.href = `/`">Dashboard</p>
+                </div>
+            </li>
+
+            <li class="">
+                <a class="flex align-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="users-alt" class="icon">
+                        <path
+                            d="M12.3,12.22A4.92,4.92,0,0,0,14,8.5a5,5,0,0,0-10,0,4.92,4.92,0,0,0,1.7,3.72A8,8,0,0,0,1,19.5a1,1,0,0,0,2,0,6,6,0,0,1,12,0,1,1,0,0,0,2,0A8,8,0,0,0,12.3,12.22ZM9,11.5a3,3,0,1,1,3-3A3,3,0,0,1,9,11.5Zm9.74.32A5,5,0,0,0,15,3.5a1,1,0,0,0,0,2,3,3,0,0,1,3,3,3,3,0,0,1-1.5,2.59,1,1,0,0,0-.5.84,1,1,0,0,0,.45.86l.39.26.13.07a7,7,0,0,1,4,6.38,1,1,0,0,0,2,0A9,9,0,0,0,18.74,11.82Z">
+                        </path>
+                    </svg>
+                    <span class="text">Clients & Vendors</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="angle-right"
+                        class="icon svg-secondary arrow">
+                        <path
+                            d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z">
+                        </path>
+                    </svg>
+                </a>
+                <div class="sub-menu">
+                    <p onclick="location.href=`/clients-prospects`">Clients</p>
+                    <p onclick="location.href=`/vendors-suppliers`">Vendors</p>
+                </div>
+            </li>
+
+            <li>
+                <a class="flex align-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="users-alt" class="icon">
+                        <path
+                            d="M12.3,12.22A4.92,4.92,0,0,0,14,8.5a5,5,0,0,0-10,0,4.92,4.92,0,0,0,1.7,3.72A8,8,0,0,0,1,19.5a1,1,0,0,0,2,0,6,6,0,0,1,12,0,1,1,0,0,0,2,0A8,8,0,0,0,12.3,12.22ZM9,11.5a3,3,0,1,1,3-3A3,3,0,0,1,9,11.5Zm9.74.32A5,5,0,0,0,15,3.5a1,1,0,0,0,0,2,3,3,0,0,1,3,3,3,3,0,0,1-1.5,2.59,1,1,0,0,0-.5.84,1,1,0,0,0,.45.86l.39.26.13.07a7,7,0,0,1,4,6.38,1,1,0,0,0,2,0A9,9,0,0,0,18.74,11.82Z">
+                        </path>
+                    </svg>
+                    <span class="text">Accounting</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="angle-right" class="icon svg-secondary arrow">
+                        <path
+                            d="M14.83,11.29,10.59,7.05a1,1,0,0,0-1.42,0,1,1,0,0,0,0,1.41L12.71,12,9.17,15.54a1,1,0,0,0,0,1.41,1,1,0,0,0,.71.29,1,1,0,0,0,.71-.29l4.24-4.24A1,1,0,0,0,14.83,11.29Z">
+                        </path>
+                    </svg>
+                </a>
+                <div class="sub-menu">
+                    <p onclick="location.href=`/collections`">Collections</p>
+                    <p onclick="location.href=`/payments`">Payments</p>
+                    <p onclick="location.href=`/purchases`">Purchases</p>
+                </div>
+            </li>
+
+            <li class="" onclick="openNotification(this)">
+                <a class="flex align-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 24 24" id="bell"
+                        class="icon">
+                        <path fill="##000000"
+                            d="M18,13.18V10a6,6,0,0,0-5-5.91V3a1,1,0,0,0-2,0V4.09A6,6,0,0,0,6,10v3.18A3,3,0,0,0,4,16v2a1,1,0,0,0,1,1H8.14a4,4,0,0,0,7.72,0H19a1,1,0,0,0,1-1V16A3,3,0,0,0,18,13.18ZM8,10a4,4,0,0,1,8,0v3H8Zm4,10a2,2,0,0,1-1.72-1h3.44A2,2,0,0,1,12,20Zm6-3H6V16a1,1,0,0,1,1-1H17a1,1,0,0,1,1,1Z">
+                        </path>
+                    </svg>
+                    <span class="text">Notifications</span>
+                    <span id="notification-count" class="btn-warning">5</span>
+                </a>
+            </li>
+
+            <li class="" onclick="location.href=`/settings`">
+                <a class="flex align-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 24 24" id="setting"
+                        class="icon">
+                        <path fill=""
+                            d="M19.9 12.66a1 1 0 0 1 0-1.32l1.28-1.44a1 1 0 0 0 .12-1.17l-2-3.46a1 1 0 0 0-1.07-.48l-1.88.38a1 1 0 0 1-1.15-.66l-.61-1.83a1 1 0 0 0-.95-.68h-4a1 1 0 0 0-1 .68l-.56 1.83a1 1 0 0 1-1.15.66L5 4.79a1 1 0 0 0-1 .48L2 8.73a1 1 0 0 0 .1 1.17l1.27 1.44a1 1 0 0 1 0 1.32L2.1 14.1a1 1 0 0 0-.1 1.17l2 3.46a1 1 0 0 0 1.07.48l1.88-.38a1 1 0 0 1 1.15.66l.61 1.83a1 1 0 0 0 1 .68h4a1 1 0 0 0 .95-.68l.61-1.83a1 1 0 0 1 1.15-.66l1.88.38a1 1 0 0 0 1.07-.48l2-3.46a1 1 0 0 0-.12-1.17ZM18.41 14l.8.9-1.28 2.22-1.18-.24a3 3 0 0 0-3.45 2L12.92 20h-2.56L10 18.86a3 3 0 0 0-3.45-2l-1.18.24-1.3-2.21.8-.9a3 3 0 0 0 0-4l-.8-.9 1.28-2.2 1.18.24a3 3 0 0 0 3.45-2L10.36 4h2.56l.38 1.14a3 3 0 0 0 3.45 2l1.18-.24 1.28 2.22-.8.9a3 3 0 0 0 0 3.98Zm-6.77-6a4 4 0 1 0 4 4 4 4 0 0 0-4-4Zm0 6a2 2 0 1 1 2-2 2 2 0 0 1-2 2Z">
+                        </path>
+                    </svg>
+                    <span class="text">Settings</span>
+                </a>
+            </li>
+            <li onclick="location.href=`/admin/logout`">
+                <a class="flex align-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="signout" class="icon">
+                        <path
+                            d="M4,12a1,1,0,0,0,1,1h7.59l-2.3,2.29a1,1,0,0,0,0,1.42,1,1,0,0,0,1.42,0l4-4a1,1,0,0,0,.21-.33,1,1,0,0,0,0-.76,1,1,0,0,0-.21-.33l-4-4a1,1,0,1,0-1.42,1.42L12.59,11H5A1,1,0,0,0,4,12ZM17,2H7A3,3,0,0,0,4,5V8A1,1,0,0,0,6,8V5A1,1,0,0,1,7,4H17a1,1,0,0,1,1,1V19a1,1,0,0,1-1,1H7a1,1,0,0,1-1-1V16a1,1,0,0,0-2,0v3a3,3,0,0,0,3,3H17a3,3,0,0,0,3-3V5A3,3,0,0,0,17,2Z">
+                        </path>
+                    </svg>
+                    <span class="text">Log Out</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</div>
